<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="call_queue_status">已呼叫</string>
    <string name="call_queue_message">呼叫信息</string>

    <!--HDMI-IN-->
    <string name="cannot_connect_camera">Can\'t connect to the camera.</string>
    <string name="camera_disabled">Camera has been disabled because of security policies.</string>
    <string name="no_storage" product="default">Insert an SD card before using the camera.</string>
    <string name="camera_error_title">Camera error</string>
    <string name="dialog_ok">OK</string>

    <!--云标物联中文-->
    <string name="app_name">云标</string>
    <string name="yunbiaowulian">云标物联</string>
    <string name="yk_download">云控下载</string>
    <string name="setting">设置</string>
    <string name="setting_hint">按‘菜单’进入设置</string>
    <string name="bind_user">已绑定用户</string>
    <string name="unbind_user">未绑定用户</string>
    <string name="access_code">云接入码</string>
    <string name="phone_sweep_bind">手机扫码绑定</string>
    <string name="fast_publish">快速发布</string>
    <string name="set_program">设置节目</string>
    <string name="weixin_code">扫码快发</string>
    <string name="step_hint">按不同方法发布节目</string>
    <string name="dev_num_repeat">设备编号重复，该设备已经存在</string>
    <string name="dev_usage_licenses">可管理设备数量超出许可最大值,请购买新的系统使用许可</string>
    <string name="dev_usage_fail">厂商信息验证失败！</string>
    <string name="menu_title">云标物联信息发布</string>
    <string name="menu_title_slogan">云标物联，万物互联</string>
    <string name="home_page">首页</string>
    <string name="menu_bind_user">已绑定</string>
    <string name="normal_service">正常服务</string>
    <string name="menu_dev_num">设备号：</string>
    <string name="menu_access_num">接入码：</string>
    <string name="menu_play_program">播放节目</string>
    <string name="menu_offline_layout">离线布局</string>
    <string name="menu_server">服务器：</string>
    <string name="menu_connection">是否连接：</string>
    <string name="menu_dev_name">设备名称：</string>
    <string name="menu_server_setting">服务设置</string>
    <string name="menu_system_setting">系统设置</string>
    <string name="play">节目播放按钮</string>
    <string name="auto_play">设备有节目时自动60秒进入播放</string>
    <string name="local_program">本地节目设置</string>
    <string name="use_usb_play">通过外部存储播放节目</string>
    <string name="yun_or_local">设置云服务或局域网服务</string>
    <string name="delete_current_layout">删除当前运行布局，清理数据</string>
    <string name="system_base_setting">系统基本设置</string>
    <string name="pwd_on_off">访问密码，定时开关机</string>
    <string name="import_layout">导入布局</string>
    <string name="use_yun_import_layout">通过云平台下载导入布局</string>
    <string name="set_layout">设置布局</string>
    <string name="hint_click_play">点击播放节目进入信息界面</string>
    <string name="no_program">暂无节目</string>
    <string name="dev_expired">设备过期</string>
    <string name="dev_no_active">未激活</string>
    <string name="dev_no_authorization">未授权</string>
    <string name="dev_standalone">单机版</string>
    <string name="connected">已连接</string>
    <string name="no_connected">未连接</string>
    <string name="yunbiao_server">云标云服务</string>
    <string name="unbind">未绑定</string>
    <string name="hint_pay_ok">续费成功，您可以继续使用云服务!</string>
    <string name="hint_pay_fail">续费失败，请重新支付!</string>
    <string name="two_screen">二分屏</string>
    <string name="one_screen">一分屏</string>
    <string name="three_screen">三分屏</string>
    <string name="logo_and_time">LOGO和时间</string>
    <string name="scrolling_subtitles"> 滚动字幕</string>
    <string name="picture_scroll_time">图片轮播间隔时间（秒）：</string>
    <string name="picture_switch">图片切换效果：</string>
    <string name="effect_no">无动画</string>
    <string name="complete">完成</string>
    <string name="please_select_time">请选择图片轮播的时间（秒）：</string>
    <string name="please_select_animation">请选择图片切换效果：</string>
    <string name="effect_ver">竖切飞入</string>
    <string name="effect_enlarge">放大切入</string>
    <string name="effect_left">左边切入</string>
    <string name="effect_right">右边切入</string>
    <string name="effect_rotate">旋转切入</string>
    <string name="effect_transparency">透明度切入</string>
    <string name="effect_enlarge_rotate">放大旋转切入</string>
    <string name="is_sure_publish_offline">是否确认发布离线布局？</string>
    <string name="hint_publish_offline">确认发布后，新布局会替换掉原来布局设置</string>
    <string name="input_pwd">请输入密码</string>
    <string name="input_pwd_again">请再次输入密码</string>
    <string name="input_name_bind">请输入用户名和绑定码</string>
    <string name="cancel">取消</string>
    <string name="sure">确定</string>
    <string name="hint_bg_music">请将背景音乐文件名称改为bgmusic.mp3放到目录/yunbiao中</string>
    <string name="offline_two_title">离线布局-导入布局</string>
    <string name="input_offline_layout">导入离线布局</string>
    <string name="input_step_one">登录云平台，在布局方案中下载布局资源包</string>
    <string name="input_step_two">将下载的资源包通过U盘拷贝到广告机</string>
    <string name="input_step_three">点击导入离线布局按钮，选择保存的资源包进行导入</string>
    <string name="check_usb">请检查是否接入外部设备</string>
    <string name="select_zip">请选择要导入的本地资源包（.zip）:</string>
    <string name="unzip">正在解压资源文件，稍后会自动重启，请稍等...</string>
    <string name="zip_fail">资源文件选择错误，未找到 layout.txt</string>
    <string name="restart_app">重启软件</string>
    <string name="restart_three_seconds">本地布局导入成功，3秒后将重启软件</string>
    <string name="server_set">服务设置</string>
    <string name="dev_serial_num">设 备 序 号 ：   </string>
    <string name="dev_access_num">设备接入码：   </string>
    <string name="dev_machine_num">设备机器码：   </string>
    <string name="inner_storage">内 置 存 储 ：   </string>
    <string name="outer_storage">外 置 存 储 ：   </string>
    <string name="business_type">业 务 类 型 ：   </string>
    <string name="version_update">版本更新</string>
    <string name="date_process">数 据 处 理 ：   </string>
    <string name="delete_layout">删除布局</string>
    <string name="clear_disk">清理磁盘</string>
    <string name="server_connect">服 务 连 接 ：   </string>
    <string name="server_ip">服务器地址:</string>
    <string name="port_num">端口号:</string>
    <string name="downloading">正在下载中……</string>
    <string name="online_edition">网络版</string>
    <string name="click_update">点击更新</string>
    <string name="is_delete_layout">是否确认删除布局？ </string>
    <string name="delete_layout_three">删除布局后将没有播放内容，点击确认3秒后将重启软件？ </string>
    <string name="is_clear_no_layout">是否确认清除非布局数据？ </string>
    <string name="click_clear_no_layout">点击确认将删除布局文件之外的数据 </string>
    <string name="no_layout_delete">非布局数据已删除 </string>
    <string name="three_seconds_restart">3秒后将重启软件 </string>
    <string name="used">已用:</string>
    <string name="no_used">/可用:</string>
    <string name="ver_infor">信息发布</string>
    <string name="switch_cloud">云标</string>
    <string name="switch_local">本地</string>
    <string name="system_set">系统设置</string>
    <string name="line_net">以太网</string>
    <string name="show">显示</string>
    <string name="voice">声音</string>
    <string name="time_set">定时开关机</string>
    <string name="date_set">日期时间</string>
    <string name="pwd_set">访问密码</string>
    <string name="factor_restart">恢复出厂设置</string>
    <string name="about">关于设备</string>
    <string name="wifi_open">打开</string>
    <string name="wifi_close">关闭</string>
    <string name="wifi_connect">连接成功</string>
    <string name="wifi_fail">连接失败</string>
    <string name="load_wifi">正在为您加载WIFI列表</string>
    <string name="please_wait">请稍候...</string>
    <string name="connect_last_wifi">连接上次WIFI</string>
    <string name="unprotected">未受保护的网络</string>
    <string name="through"> 通过 </string>
    <string name="protect"> 进行保护 </string>
    <string name="click_to_net">点击进入网络设置</string>
    <string name="net_is_fail">网络不可用，请检查网线是否连接</string>
    <string name="net_is_ok">网络可用</string>
    <string name="set_brightness">设置亮度：</string>
    <string name="screen_rotate">屏幕旋转：</string>
    <string name="screen_hor">横屏</string>
    <string name="screen_ver">竖屏</string>
    <string name="screen_fan_hor">反向横屏</string>
    <string name="screen_fan_ver">反向竖屏</string>
    <string name="set_voice">设置音量：</string>
    <string name="is_set_power">  是否设置定时开关机</string>
    <string name="off_time">关机时间：</string>
    <string name="on_time">开机时间：</string>
    <string name="hint_power">提示：点击完成按钮，即自动设置开关机时间</string>
    <string name="off_fail">关机时间不正确</string>
    <string name="on_fail">开机时间不正确</string>
    <string name="current_time">当前时间：</string>
    <string name="is_set_time">  是否手动设置日期时间</string>
    <string name="set_date">设置日期：  </string>
    <string name="set_time">设置时间：  </string>
    <string name="sync_time">时间同步</string>
    <string name="hint_time">提示：点击时间同步按钮，使当前设备时间与服务器时间同步</string>
    <string name="set_pwd">设置密码</string>
    <string name="clear_pwd">清除密码</string>
    <string name="hint_pwd">温馨提示:设置密码有利于加强对软件的保护，谨防泄漏。</string>
    <string name="no_pwd">您还未设置密码</string>
    <string name="yes_pwd">您已设置密码</string>
    <string name="clear_pwd_ok">密码清除成功</string>
    <string name="pwd_max_length">设置密码（长度不得大于6位）</string>
    <string name="pwd_is_null">密码不能为空</string>
    <string name="pwd_two_diff">两次输入密码不一样</string>
    <string name="have_pwd">您已设置密码</string>
    <string name="active">确认激活</string>
    <string name="no_active">您还没有获得管理员权限，是否激活?</string>
    <string name="sure_active">确认激活</string>
    <string name="is_recovery_dec">该设备已获得系统设备管理权限，是否要恢复出厂设置？</string>
    <string name="recovery_dec">恢复出厂设置</string>
    <string name="about_model">型号： </string>
    <string name="about_version">Android 版本：  </string>
    <string name="about_available">可用内存：  </string>
    <string name="about_resolution">屏幕分辨率： </string>
    <string name="about_kernel">内核版本： </string>
    <string name="about_serial">序列号： </string>
    <string name="about_wlan_mac">WLAN MAC 地址： </string>
    <string name="about_dev_version">版本号： </string>
    <string name="wifi_connect_status">连接状态</string>
    <string name="wifi_signal">信号强度</string>
    <string name="wifi_pwd">密码</string>
    <string name="wifi_show_pwd">显示密码</string>
    <string name="wifi_to_connect">连接</string>
    <string name="pwd_protect">密码保护</string>
    <string name="input_pwd_to_next">请输入您设定是密码，再进行操作。</string>
    <string name="pwd_is_error">密码不正确</string>
    <string name="input_name">请输入用户名</string>
    <string name="input_bind_code">请输入绑定码</string>
    <string name="input_name_and_name">请输入用户名和绑定码</string>
    <string name="bind">绑定</string>
    <string name="bind_dev">绑定设备</string>
    <string name="bind_dev_ok">设备绑定成功</string>
    <string name="bind_code_no">输入绑定码的用户不存在，请重新输入</string>
    <string name="bind_code_transfer_error">设备机器码传递问题</string>
    <string name="bind_code_is_null">用户名或者绑定码不能为空</string>
    <string name="bind_code_no_get">没有获取到设备机器码</string>
    <string name="signal_no">无信号</string>
    <string name="signal_weak">弱</string>
    <string name="signal_strong">强</string>
    <string name="signal_stronger">较强</string>
    <string name="signal_very_strong">极强</string>
    <string name="unauthorized">未授权</string>
    <string name="no_sdcard">本设备中没有SD卡，请插入sd卡！</string>
    <string name="sd_one">外置SD卡目录 yunbiao/</string>
    <string name="sd_two">中没有视频和图片文件！</string>
    <string name="play_error">播放出错</string>
    <string name="play_cache">正在缓冲...</string>
    <string name="cache_complete">缓冲完成</string>
    <string name="contact_us">服务热线：400-188-6581</string>

</resources>