<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_conn_wifi_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="@dimen/mar_15_dp"
        android:text="Large Text"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/light_blue"
        android:textSize="@dimen/menu1080_tv_30_dp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/line_hor_blue" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/mar_10_dp"
        android:paddingRight="@dimen/mar_10_dp"
        android:paddingTop="@dimen/mar_20_dp">

        <TextView
            android:id="@+id/tv_label_signal_strength"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wifi_signal"
            android:textSize="@dimen/menu1080_tv_18_dp" />

        <TextView
            android:id="@+id/tv_conn_signal_strength"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wifi_signal"
            android:textColor="@android:color/black"
            android:textSize="@dimen/menu1080_tv_18_dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mar_10_dp"
            android:text="@string/wifi_pwd"
            android:textColor="@android:color/black"
            android:textSize="@dimen/menu1080_tv_18_dp" />

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@android:color/black" />

        <CheckBox
            android:id="@+id/cbx_show_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mar_10_dp"
            android:text="@string/wifi_show_pwd"
            android:textColor="@android:color/black"
            android:textSize="@dimen/menu1080_tv_18_dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mar_20_dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_conn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/dialog_btn"
            android:padding="@dimen/mar_10_dp"
            android:text="@string/cancel"
            android:textSize="@dimen/menu1080_tv_20_dp" />


        <Button
            android:id="@+id/btn_conn_connect"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/dialog_btn"
            android:padding="@dimen/mar_10_dp"
            android:text="@string/wifi_to_connect"
            android:textSize="@dimen/menu1080_tv_20_dp" />
    </LinearLayout>

</LinearLayout>