<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_show_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="@dimen/mar_15_dp"
        android:text="Large Text"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/light_blue"
        android:textSize="@dimen/menu1080_tv_30_dp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/line_hor_blue" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/mar_10_dp"
        android:paddingRight="@dimen/mar_10_dp"
        android:paddingTop="@dimen/mar_20_dp">

        <!-- 状态 -->

        <TextView
            android:id="@+id/txt_label_conn_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mar_5_dp"
            android:text="@string/wifi_connect_status"
            android:textSize="@dimen/menu1080_tv_18_dp" />

        <TextView
            android:id="@+id/tv_conn_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wifi_connect_status"
            android:textColor="#000"
            android:textSize="@dimen/menu1080_tv_18_dp"
            android:textStyle="bold" />
        <!-- 信号强度 -->

        <TextView
            android:id="@+id/txt_label_signal_strength"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mar_10_dp"
            android:text="@string/wifi_signal"
            android:textSize="@dimen/menu1080_tv_18_dp" />

        <TextView
            android:id="@+id/tv_signal_strength"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wifi_signal"
            android:textColor="#000"
            android:textSize="@dimen/menu1080_tv_18_dp"
            android:textStyle="bold" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mar_20_dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/dialog_btn"
            android:padding="@dimen/mar_10_dp"
            android:text="@string/cancel"
            android:textSize="@dimen/menu1080_tv_20_dp" />


        <Button
            android:id="@+id/btn_disconnect"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/dialog_btn"
            android:padding="@dimen/mar_10_dp"
            android:text="@string/cancel"
            android:textSize="@dimen/menu1080_tv_20_dp" />
    </LinearLayout>

</LinearLayout>